# easyeda2kicad.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: all.rs
src/: api.rs  converter.rs  easyeda_models.rs  error.rs  file_writer.rs  importer.rs  kicad_models.rs  lib.rs
tests/: converter_tests.rs
