[package]
name = "easyeda2kicad-rs"
version = "1.1.1"
edition = "2024"
description = "A Rust library for converting EasyEDA projects to KiCad format."
homepage = "https://github.com/BiggiePete/easyeda2kicad.rs"
repository = "https://github.com/BiggiePete/easyeda2kicad.rs"
authors = ["biggiePete"]
readme = "README.md"
keywords = ["EasyEDA", "KiCad", "conversion", "PCB"]
categories = ["api-bindings", "development-tools"]
license = "MIT"

exclude = ["example_lib"]

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }
thiserror = "1.0"
log = "^0.4"
regex = "^1"
glam = "^0.24"
bytes = "1.10.1"
